--- a/styles/style.css
+++ b/styles/style.css
@@ -35,8 +35,9 @@ html {
 }
 
 body {
-  font-family: "Plus Jakarta Sans", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif !important;
   font-size: 93.75%;
+  padding: 4rem;
   background-color: var(--gray-100);
 }
 
@@ -96,6 +97,13 @@ body {
   font-size: var(--text-sm);
 }
 
+.remove-task {
+  color: var(--gray-100);
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
 .add-task img {
   margin-bottom: -4.299px;
   padding-left: 0.45rem;
@@ -112,4 +120,26 @@ body {
 
 .remove-task:hover {
   color: var(--red-300);
+}
+
+.task-item {
+  width: 39.5rem;
+  height: 4.5rem;
+  padding: 1.5rem;
+  background-color: var(--gray-400);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 5px;
+  border: none;
+  margin-bottom: 1rem;
+}
+
+.fa-solid {
+  margin-bottom: 10px;
+}
+
+.task-description {
+  font-size: var(--text-sm);
+  color: var(--gray-100);
 }
