--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url("breakpoint.css");
+
 *,
 ::before,
 ::after {
@@ -32,6 +34,7 @@ html {
   --gray-100: #f2f2f2;
 
   --red-300: #e25858;
+  --green-400: #78CFB0;
 }
 
 body {
@@ -57,7 +60,7 @@ body {
   margin-bottom: 2.5rem;
 }
 
-.container-chato {
+.task-component {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -74,7 +77,7 @@ body {
   width: 39.875rem;
   height: 3.375rem;
   border-radius: 5.5px;
-  padding: .8756rem;
+  padding: 0.8756rem;
   outline: none;
   border: 1px solid var(--gray-500);
   background-color: var(--gray-500);
@@ -102,7 +105,8 @@ body {
   font-size: var(--text-sm);
 }
 
-.remove-task {
+.remove-task,
+.check-task {
   color: var(--gray-100);
   background: none;
   border: none;
@@ -140,6 +144,12 @@ body {
   margin-bottom: 1rem;
 }
 
+.task-item div {
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+}
+
 .fa-solid {
   margin-bottom: 10px;
 }
@@ -147,4 +157,26 @@ body {
 .task-description {
   font-size: var(--text-sm);
   color: var(--gray-100);
+}
+
+.footer {
+  display: flex;
+  place-content: center;
+  margin-top: 2.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.contact-component {
+  display: flex;
+  gap: 20px;
+}
+
+.contact-component li {
+  list-style: none;
+  cursor: pointer;
+}
+
+.contact-component li a img:hover {
+  filter: brightness(0.8);
+  transition: all ease-in-out 5ms;
 }
